--- a/about.html
+++ b/about.html
@@ -11,30 +11,21 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
         :root { --brand-orange: #fc670c; --brand-dark: #111827; --text-main: #374151; }
         body { font-family: 'Inter', sans-serif; color: var(--text-main); }
-        .logo-font { font-family: 'Inter', sans-serif; font-weight: 900; letter-spacing: -0.05em; }
+        .logo-font { font-family: 'Inter', sans-serif; font-weight: 900; }
         h1, h2, h3 { color: var(--brand-dark); font-weight: 800; text-transform: uppercase; }
         .bg-grid { background-image: radial-gradient(#e5e7eb 1px, transparent 1px); background-size: 40px 40px; }
-        .cta-button { background-color: var(--brand-orange); color: #FFFFFF; transition: all 0.3s ease; border-radius: 12px; }
-        .cta-button:hover { background-color: #e65c0c; transform: translateY(-2px); box-shadow: 0 10px 20px rgba(252, 103, 12, 0.2); }
     </style>
 </head>
 <body class="bg-white">
-    <header class="sticky top-0 z-50 bg-[#111827] border-b border-white/5 py-4 backdrop-blur-lg">
+    <header class="bg-[#111827] border-b border-white/5 py-4">
         <div class="container mx-auto px-4 flex justify-between items-center">
             <a href="index.html" class="logo-font text-3xl"><span class="text-[#fc670c]">HOT</span><span class="text-white">PLAN</span></a>
-            <nav class="hidden xl:flex gap-6 text-[9px] font-black uppercase tracking-[0.2em] text-white/70">
-                <a href="services.html" class="hover:text-[#fc670c]">Системы</a>
-                <a href="restorany.html" class="hover:text-[#fc670c]">Рестораны</a>
-                <a href="ofisy.html" class="hover:text-[#fc670c]">Офисы</a>
-                <a href="kvartiry.html" class="hover:text-[#fc670c]">Квартиры</a>
+            <nav class="hidden md:flex gap-8 text-[10px] font-black uppercase tracking-widest text-white/70">
+                <a href="services.html" class="hover:text-[#fc670c]">Услуги</a>
                 <a href="portfolio.html" class="hover:text-[#fc670c]">Кейсы</a>
-                <a href="prices.html" class="hover:text-[#fc670c]">Цены</a>
-                <a href="sro.html" class="hover:text-[#fc670c]">СРО</a>
+                <a href="about.html" class="text-white">О бюро</a>
+                <a href="contacts.html" class="hover:text-[#fc670c]">Контакты</a>
             </nav>
-            <div class="hidden lg:flex items-center gap-6">
-                <a href="tel:+74999386615" class="text-sm font-black text-white">+7 (499) 938-66-15</a>
-                <a href="#quiz" class="cta-button px-6 py-3 text-[10px] font-black uppercase">КП за 30 мин</a>
-            </div>
         </div>
     </header>
 
@@ -117,43 +108,9 @@
         </section>
     </main>
 
-    <footer class="bg-[#111827] text-white pt-24 pb-12 border-t border-white/5">
-        <div class="container mx-auto px-4">
-            <div class="grid md:grid-cols-4 gap-12 mb-12">
-                <div>
-                    <div class="logo-font text-3xl mb-6"><span class="text-[#fc670c]">HOT</span>PLAN</div>
-                    <p class="text-xs text-slate-400">Проектирование инженерных систем в Москве</p>
-                </div>
-                <div>
-                    <h4 class="text-sm font-black uppercase mb-4 tracking-widest text-[#fc670c]">Услуги</h4>
-                    <ul class="space-y-2 text-xs text-slate-400">
-                        <li><a href="services.html" class="hover:text-white transition-colors">Системы</a></li>
-                        <li><a href="restorany.html" class="hover:text-white transition-colors">Рестораны</a></li>
-                        <li><a href="ofisy.html" class="hover:text-white transition-colors">Офисы</a></li>
-                        <li><a href="kvartiry.html" class="hover:text-white transition-colors">Квартиры</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="text-sm font-black uppercase mb-4 tracking-widest text-[#fc670c]">Информация</h4>
-                    <ul class="space-y-2 text-xs text-slate-400">
-                        <li><a href="portfolio.html" class="hover:text-white transition-colors">Кейсы</a></li>
-                        <li><a href="prices.html" class="hover:text-white transition-colors">Цены</a></li>
-                        <li><a href="sro.html" class="hover:text-white transition-colors">СРО</a></li>
-                        <li><a href="about.html" class="hover:text-white transition-colors">О бюро</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="text-sm font-black uppercase mb-4 tracking-widest text-[#fc670c]">Контакты</h4>
-                    <ul class="space-y-2 text-xs text-slate-400">
-                        <li><a href="contacts.html" class="hover:text-white transition-colors">Контакты</a></li>
-                        <li><a href="tel:+74999386615" class="hover:text-white transition-colors">+7 (499) 938-66-15</a></li>
-                        <li><a href="mailto:info@hot-plan.ru" class="hover:text-white transition-colors">info@hot-plan.ru</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="border-t border-white/5 pt-8 text-center">
-                <p class="text-[9px] font-black uppercase tracking-[0.4em] text-slate-600">© 2024 HOTPLAN. СРО № П.035.77.1234. Москва, Саввинская наб. 15</p>
-            </div>
+    <footer class="bg-[#111827] text-white py-12">
+        <div class="container mx-auto px-4 text-center">
+            <p class="text-[9px] font-black uppercase tracking-widest text-slate-600">© 2024 HOTPLAN. Экспертиза. Качество. Скорость.</p>
         </div>
     </footer>
 
