--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         .bg-grid { background-image: radial-gradient(#e5e7eb 1px, transparent 1px); background-size: 40px 40px; }
         .cta-button { background-color: var(--brand-orange); color: #FFFFFF; transition: all 0.3s ease; border-radius: 12px; }
         .cta-button:hover { background-color: #e65c0c; transform: translateY(-2px); box-shadow: 0 10px 20px rgba(252, 103, 12, 0.2); }
-        h1, h2, h3 { color: var(--brand-dark); font-weight: 800; text-transform: uppercase; letter-spacing: -0.05em; }
+        h1, h2, h3 { color: var(--brand-dark); font-weight: 800; text-transform: uppercase; tracking-tighter; }
     </style>
 <script type="importmap">
 {
@@ -42,25 +42,24 @@
                 <a href="sro.html" class="hover:text-[#fc670c]">СРО</a>
             </nav>
             <div class="hidden lg:flex items-center gap-6">
-                <a href="tel:+74999386615" class="text-sm font-black text-white">+7 (499) 938-66-15</a>
+                <a href="tel:+74950000000" class="text-sm font-black text-white">+7 (495) 000-00-00</a>
                 <a href="#quiz" class="cta-button px-6 py-3 text-[10px] font-black uppercase">КП за 30 мин</a>
-               <button id="open-modal-btn" class="cta-button px-6 py-3 text-[10px] font-black uppercase">Оставить заявку</button>
-           </div>
+            </div>
         </div>
     </header>
 
     <main>
         <!-- Hero Section -->
-        <section class="bg-[#111827] text-white pt-32 pb-24 md:pt-48 md:pb-40 relative overflow-visible">
-            <div class="absolute inset-0 opacity-10 bg-grid z-0"></div>
-            <div class="container mx-auto px-4 relative z-20 grid lg:grid-cols-2 gap-16 items-center">
-                <div class="space-y-8 overflow-visible relative z-30">
-                    <div class="inline-flex items-center gap-3 px-4 py-2 bg-white/5 border border-white/10 rounded-full text-[10px] font-black uppercase tracking-widest text-[#fc670c] mb-4">
+        <section class="bg-[#111827] text-white py-24 md:py-40 relative overflow-hidden">
+            <div class="absolute inset-0 opacity-10 bg-grid"></div>
+            <div class="container mx-auto px-4 relative z-10 grid lg:grid-cols-2 gap-16 items-center">
+                <div class="space-y-8">
+                    <div class="inline-flex items-center gap-3 px-4 py-2 bg-white/5 border border-white/10 rounded-full text-[10px] font-black uppercase tracking-widest text-[#fc670c]">
                         <span class="w-2 h-2 bg-[#fc670c] rounded-full animate-pulse"></span>
                         BIM Проектирование в Revit
                     </div>
-                    <h1 class="text-5xl md:text-7xl font-black leading-tight mb-6 text-white">Комплексное проектирование <span class="text-[#fc670c]">инженерных систем</span> в Москве</h1>
-                    <p class="text-slate-400 text-xl font-medium max-w-xl leading-relaxed">Разработка разделов ОВ, ВК, ЭОМ с гарантией отсутствия коллизий. Экономия до 20% бюджета на этапе монтажа.</p>
+                    <h1 class="text-5xl md:text-7xl font-black leading-[0.9]">Комплексное проектирование <span class="text-[#fc670c]">инженерных систем</span> в Москве</h1>
+                    <p class="text-slate-400 text-xl font-medium max-w-xl">Разработка разделов ОВ, ВК, ЭОМ с гарантией отсутствия коллизий. Экономия до 20% бюджета на этапе монтажа.</p>
                     <div class="flex flex-wrap gap-6">
                         <a href="#quiz" class="cta-button px-10 py-5 font-black uppercase text-xs">Рассчитать стоимость</a>
                         <div class="flex items-center gap-4 text-white/50 text-[10px] font-black uppercase tracking-widest">
@@ -69,7 +68,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="hidden lg:block relative z-20">
+                <div class="hidden lg:block relative">
                     <div class="aspect-square bg-slate-800 rounded-[80px] border-[20px] border-white/5 overflow-hidden group">
                         <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?auto=format&fit=crop&q=80&w=1200" class="w-full h-full object-cover opacity-60 group-hover:scale-110 transition-transform duration-[5s]" alt="BIM Проектирование">
                     </div>
@@ -159,89 +158,11 @@
     </main>
 
     <footer class="bg-[#111827] text-white pt-24 pb-12 border-t border-white/5">
-        <div class="container mx-auto px-4">
-            <div class="grid md:grid-cols-4 gap-12 mb-12">
-                <div>
-                    <div class="logo-font text-3xl mb-6"><span class="text-[#fc670c]">HOT</span>PLAN</div>
-                    <p class="text-xs text-slate-400">Проектирование инженерных систем в Москве</p>
-                </div>
-                <div>
-                    <h4 class="text-sm font-black uppercase mb-4 tracking-widest text-[#fc670c]">Услуги</h4>
-                    <ul class="space-y-2 text-xs text-slate-400">
-                        <li><a href="services.html" class="hover:text-white transition-colors">Системы</a></li>
-                        <li><a href="restorany.html" class="hover:text-white transition-colors">Рестораны</a></li>
-                        <li><a href="ofisy.html" class="hover:text-white transition-colors">Офисы</a></li>
-                        <li><a href="kvartiry.html" class="hover:text-white transition-colors">Квартиры</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="text-sm font-black uppercase mb-4 tracking-widest text-[#fc670c]">Информация</h4>
-                    <ul class="space-y-2 text-xs text-slate-400">
-                        <li><a href="portfolio.html" class="hover:text-white transition-colors">Кейсы</a></li>
-                        <li><a href="prices.html" class="hover:text-white transition-colors">Цены</a></li>
-                        <li><a href="sro.html" class="hover:text-white transition-colors">СРО</a></li>
-                        <li><a href="about.html" class="hover:text-white transition-colors">О бюро</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="text-sm font-black uppercase mb-4 tracking-widest text-[#fc670c]">Контакты</h4>
-                    <ul class="space-y-2 text-xs text-slate-400">
-                        <li><a href="contacts.html" class="hover:text-white transition-colors">Контакты</a></li>
-                        <li><a href="tel:+74999386615" class="hover:text-white transition-colors">+7 (499) 938-66-15</a></li>
-                        <li><a href="mailto:info@hot-plan.ru" class="hover:text-white transition-colors">info@hot-plan.ru</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="border-t border-white/5 pt-8 text-center">
-                <p class="text-[9px] font-black uppercase tracking-[0.4em] text-slate-600">© 2024 HOTPLAN. СРО № П.035.77.1234. Москва, Саввинская наб. 15</p>
-            </div>
+        <div class="container mx-auto px-4 text-center">
+            <div class="logo-font text-3xl mb-12"><span class="text-[#fc670c]">HOT</span>PLAN</div>
+            <p class="text-[9px] font-black uppercase tracking-[0.4em] text-slate-600">© 2024 HOTPLAN. СРО № П.035.77.1234. Москва, Саввинская наб. 15</p>
         </div>
     </footer>
-
-    <!-- Modal Structure -->
-    <div id="phone-modal" class="fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center z-50 hidden">
-        <div class="bg-white p-8 rounded-lg shadow-xl w-full max-w-md mx-4 relative">
-            <button id="close-modal-btn" class="absolute top-4 right-4 text-gray-500 hover:text-gray-800 text-2xl">&times;</button>
-            <h3 class="text-2xl font-bold mb-6 text-[#111827]">Оставить заявку</h3>
-            <p class="text-gray-600 mb-6">Введите ваш номер телефона, и мы свяжемся с вами в ближайшее время.</p>
-            <form id="phone-form">
-                <input type="tel" id="phone-input" class="w-full p-3 border border-gray-300 rounded-md mb-4 focus:outline-none focus:ring-2 focus:ring-[#fc670c]" placeholder="+7 (XXX) XXX-XX-XX" required>
-                <button type="submit" class="cta-button w-full py-3 text-sm font-black uppercase">Отправить заявку</button>
-            </form>
-        </div>
-    </div>
-
-    <script>
-        const openModalBtn = document.getElementById('open-modal-btn');
-        const closeModalBtn = document.getElementById('close-modal-btn');
-        const phoneModal = document.getElementById('phone-modal');
-        const phoneForm = document.getElementById('phone-form');
-        const phoneInput = document.getElementById('phone-input');
-
-        openModalBtn.addEventListener('click', () => {
-            phoneModal.classList.remove('hidden');
-        });
-
-        closeModalBtn.addEventListener('click', () => {
-            phoneModal.classList.add('hidden');
-        });
-
-        phoneModal.addEventListener('click', (e) => {
-            if (e.target === phoneModal) {
-                phoneModal.classList.add('hidden');
-            }
-        });
-
-        phoneForm.addEventListener('submit', (e) => {
-            e.preventDefault();
-            const phoneNumber = phoneInput.value;
-            // Here you would typically send the phone number to a server
-            console.log('Номер телефона:', phoneNumber);
-            alert('Спасибо за заявку! Мы свяжемся с вами в ближайшее время.');
-            phoneModal.classList.add('hidden');
-            phoneForm.reset();
-        });
-    </script>
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
